2008-05-28 Damien Douxchamps http://damien.douxchamps.net/

	* SVN 561: attempt to fix incoherences in the msw port.
	
2008-03-26 David Moore  <dcm@acm.org>
	* SVN 560: Fix alignment problem during reads on some platforms with
	           juju

2008-05-28 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 559: fixed wrong returned values for dc1394_trigger_get_polarity.
	           Thanks to Clement Menier.
	
2008-05-17 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 558: applied patch from Olaf Kaehler (missing #ifdef cpluspluc)
	           Corrected the email address of the list in the Readme.

2008-05-08 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 557: Update the lt verions to 23,0,1. RELEASE 2.0.2
	           (Note: the SOversion is 22.0.2)
	* SVN 556: the wrong file was uploaded for the new example, fixed.
	
2008-05-02 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 555: add a new example
	
2008-03-26 David Moore  <dcm@acm.org>
	* SVN 554: Fix build of Juju when in separate dir

2008-03-16 David Moore  <dcm@acm.org>
	* SVN 553: Update NEWS
	* SVN 552: Add function dc1394_capture_is_frame_corrupt() to test if
		   a dequeued frame is corrupt.  Integrity checking code
		   currently exists only on Mac OS.  Other platforms return
		   DC1394_FALSE.

2008-03-12 David Moore  <dcm@acm.org>
	* SVN 551: Automatically resume dequeue() if EINTR is encountered.
	* SVN 550: Bug fix dc1394_camera_get_node on Juju and Linux.
	* SVN 549: Implement dc1394_camera_get_node for Mac OS.

2008-03-11 David Moore  <dcm@acm.org>
	* SVN 548: Make linux-specific function dc1394_camera_get_node()
	           globally available and implement stubs for other platforms.
		   Add generation argument to dc1394_camera_get_node.
		   Rename dc1394_camera_get_port to
		   dc1394_camera_get_linux_port.

2008-03-10 David Moore  <dcm@acm.org>
	* SVN 547: On Linux, use a different DMA file descriptor for each
		   camera on the same controller.
